styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@font-face {
  font-family: "burtons";
  src: url("../public/Burtons.otf");
}

@font-face {
  font-family: "poppins-bold";
  src: url("../public/Poppins-Bold.ttf");
}

@font-face {
  font-family: "poppins";
  src: url("../public/Poppins-Regular.ttf");
}

@font-face {
  font-family: "sourcecode";
  src: url("../public/SourceCodePro-Regular.ttf");
}

@font-face {
  font-family: "drukwideweb";
  src: url("../public/Druk-Wide-Bold.ttf");
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
}

/* Projects Component Styling */
.projects {
  margin-top: 1rem;
}

.projectContainer {
  margin-top: 1rem;
  justify-content: space-between;
  grid-template-columns: repeat(1, 1fr);
}

.singleProject {
  display: grid;
  gap: 0.5rem;
  padding: 1.5rem 1rem;
  border-radius: 10px;
  height: 100%;
  background: #f8f5f2;
  cursor: pointer;
}

.singleProject:hover {
  transform: translateY(-7px);
  border-bottom: 4px solid #0062fd;
}

.externalLinks {
  width: 100%;
  justify-content: space-between;
}

.youtubeIcon,
.githubIcon {
  color: #0062fd;
}

.miniContainerDiv {
  width: auto;
  height: 350px;
  border-radius: 5px;
  overflow: hidden;
  cursor: pointer;
  background-color: #d9efff;
  position: relative;
  display: flex; /* Use flexbox to center the content */
  justify-content: center; /* Horizontally center the content */
}

.square {
  position: absolute;
  top: 60px;
  right: -40px;
  width: 350px; /* Adjust the width as per your requirements */
  height: 350px; /* Adjust the height as per your requirements */
  z-index: 0; /* Ensure the scribble appears above the image */
}

.stripes {
  position: absolute;
  bottom: 300px;
  left: -10px;
  width: 150px; /* Adjust the width as per your requirements */
  height: 150px; /* Adjust the height as per your requirements */
  z-index: 2; /* Ensure the scribble appears above the image */
}

.demoImg {
  align-self: center;
  position: absolute;
  width: 95%; /* Adjust the width as per your requirements */
  height: 90%; /* Adjust the height as per your requirements */
  z-index: 1; /* Ensure the scribble appears above the image */
  border-radius: 24px;
}

img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 5px;
}

.projectTitle {
  display: flex;
  font-weight: 600;
  font-family: "Poppins-Bold";
  color: #0062fd;
  font-size: xx-large;
}

.desc {
  font-size: small;
  font-family: "Poppins";
  color: black;
}

.technologies {
  gap: 0.5rem;
  justify-content: flex-end;
  font-family: "Courier New", Courier, monospace;
  color: black;
}

.small {
  font-weight: 600;
}

/* Contact Form Component Styling */

.contactContainer {
  width: 100%;
  justify-content: center;
  align-items: flex-start;
  gap: 2rem;
}

.contactCard {
  display: grid;
  align-items: center;
  row-gap: 10px;
  padding: 1.5rem;
  width: 100%;
  background: none;
  border-radius: 10px;
  text-align: center;
}

.twitterIcon,
.arrowIcon {
  color: #0062fd;
}

.contactFlex {
  justify-content: center;
  gap: 5px;
  color: F8F5F2;
  font-weight: 600;
  cursor: pointer;
}

.form {
  width: 100%;
  margin: auto;
}

input,
textarea {
  height: 1rem;
  width: 90%;
  padding: 1.5rem 0.5rem;
  border-radius: 10px;
  background: none;
  border: 2px solid;
  margin: 0.5rem 0;
  outline: none;
  color: white;
  font-weight: 600;
}

textarea {
  height: 150px;
}

.formBtn {
  display: block;
  margin: auto;
  width: 90%;
  border: none;
  padding: 1rem 0;
  background: #0062fd;
  color: white;
  cursor: pointer;
  border-radius: 10px;
  font-size: 18px;
  font-weight: 600;
}

.formBtn:hover {
  background: #0099ff;
  color: white;
}

input::placeholder,
textarea::placeholder {
  color: white;
  opacity: 0.5;
}

/* Skill Progress Bar Component */

.progress-bar {
  display: flex;
  align-items: center;
}

.progress {
  position: relative;
  width: 100%;
  height: 0.5rem;
  background-color: #0e111a;
}

.barSpan {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 100%;
  background-color: #0099ff;
  border-radius: 10px;
}

/* Skills Page */

.skills {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-row-gap: 2rem;
  grid-column-gap: 3rem;
}

/* Heading/Title Text Styling */

.sectionTitle {
  padding: 2rem;
  font-size: 2.2rem;
  font-weight: bold;
  color: white;
  display: flex;
  align-content: center;
  justify-content: center;
}

.titleSymbol {
  color: #0062fd;
  font-weight: 600;
}

.titleText {
  position: relative;
  width: max-content;
}

/* Info Card Primary for Project Case Study */

.infoCard {
  width: auto;
  height: auto;
  border-radius: 12px;
  overflow: hidden;
  cursor: pointer;
  position: relative;
  display: flex; /* Use flex to enable flexbox layout */
  flex-wrap: wrap; /* Allow elements to wrap on smaller screens */
  margin-bottom: 20px;
}

.infoCardTextWrapper {
  width: 50%;
  margin-left: 50px;
  margin-top: 20px;
  margin-bottom: 20px;
  display: flex; /* Use flex to enable flexbox layout */
  flex-direction: column; /* Stack elements vertically inside the wrapper */
  justify-content: left; /* Vertically center the content */
}

.infoCardTitle {
  display: flex;
  font-weight: 600;
  font-family: "Poppins-Bold";
  color: white;
  font-size: 64px;
  justify-content: left; /* Horizontally left the title text */
  align-items: left; /* Vertically left the title text */
  height: 100px; /* Set a fixed height for the title */
}

.infoCardDesc {
  color: white;
  font-family: "Poppins";
  font-size: 16px;
  padding: 10px; /* Add some padding for better presentation */
}

.player-wrapper {
  flex: 1; /* Set the 'player-wrapper' to occupy remaining space */
  display: flex; /* Use flex to enable flexbox layout */
  align-items: flex-end; /* Align the video to the bottom of the wrapper */
  justify-content: flex-end; /* Align the video to the right of the wrapper */
  margin: 40px;
  border-radius: 12px;
}

/* Media Query for Mobile Devices */
@media (max-width: 768px) {
  .infoCardTextWrapper {
    width: 100%;
    margin-left: 2%;
  }

  .infoCardTitle {
    font-size: 42px; /* Reduce font size further for smaller screens */
  }

  .player-wrapper {
    margin: 10px;
    order: +1; /* Change the order to place the video below the text */
  }
}

/* Media Query for Tablet Devices */
@media (min-width: 768px) and (max-width: 1024px) {
  .infoCardTextWrapper {
    width: 50%;
    margin-left: 2%;
  }

  .infoCardTitle {
    font-size: 48px;
  }

  .player-wrapper {
    width: 50%;
    margin: 20px;
  }
}

/* Info Card Secondary for Project Case Study */

.infoCardSecondary {
  width: auto;
  height: auto;
  border-radius: 12px;
  overflow: hidden;
  cursor: pointer;
  position: relative;
  display: flex; /* Use flex to enable flexbox layout */
  flex-wrap: wrap; /* Allow elements to wrap on smaller screens */
  margin-bottom: 20px;
}

.infoCardTextWrapperSecondary {
  width: 50%;
  margin-right: 50px;
  margin-top: 20px;
  margin-bottom: 20px;
  display: flex; /* Use flex to enable flexbox layout */
  flex-direction: column; /* Stack elements vertically inside the wrapper */
  justify-content: right; /* Vertically center the content */
}

.infoCardTitleSecondary {
  display: flex;
  font-weight: 600;
  font-family: "Poppins-Bold";
  color: #0062fd;
  font-size: 64px;
  justify-content: right; /* Horizontally left the title text */
  align-items: right; /* Vertically left the title text */
  height: 100px; /* Set a fixed height for the title */
}

.infoCardDescSecondary {
  color: white;
  text-align: right;
  font-family: "Poppins";
  font-size: 16px;
  padding: 10px; /* Add some padding for better presentation */
}

.player-wrapper {
  flex: 1; /* Set the 'player-wrapper' to occupy remaining space */
  display: flex; /* Use flex to enable flexbox layout */
  align-items: flex-end; /* Align the video to the bottom of the wrapper */
  justify-content: flex-end; /* Align the video to the right of the wrapper */
  margin: 40px;
  border-radius: 12px;
}

/* Media Query for Mobile Devices */
@media (max-width: 768px) {
  .infoCardTextWrapperSecondary {
    width: 100%;
    margin-left: 2%;
    text-align: left; /* Align all text to the left */
    align-items: flex-start; /* Align all text to the left */
  }

  .infoCardTitleSecondary {
    font-size: 42px; /* Reduce font size for smaller screens */
  }

  .infoCardDescSecondary {
    text-align: left; /* Align description text to the left */
  }

  .player-wrapper {
    margin: 10px;
    order: +1; /* Change the order to place the video below the text */
  }

  .square {
    top: 190px;
    right: -40px;
    width: 150px; /* Adjust the width as per your requirements */
    height: 150px; /* Adjust the height as per your requirements */
  }

  .stripes {
    bottom: 170px;
    left: -10px;
    width: 100px; /* Adjust the width as per your requirements */
    height: 100px; /* Adjust the height as per your requirements */
    z-index: 0;
  }
}

/* Media Query for Tablet Devices */
@media (min-width: 768px) and (max-width: 1024px) {
  .infoCardTextWrapperSecondary {
    width: 50%;
    margin-right: 2%;
  }

  .infoCardTitleSecondary {
    font-size: 48px;
  }

  .player-wrapper {
    width: 50%;
    margin: 20px;
  }
}

